# ai_image_sorter

./: .gitignore  LICENSE  package-lock.json  package.json
server/: .gitignore  Cargo.toml
server/src/: app_data.rs  main.rs  models.rs  utility.rs
server/src/controlers/: image_data.rs  project_info.rs
server/src/middlewares/: auth.rs
server/src/models/: image_data.rs  project_info.rs
server/src/utility/: encryption.rs  file_utilities.rs  jwt_token.rs
src/: index.ts
views/: index.ejs  newProject.ejs
