[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
hmac = "0.12.1"
hyper = "0.14.27"
jsonwebtoken = "8.3.0"
# openssl = "0.10.56"
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
